# ip-lock-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-05-16-ip-monitor.md  2026-05-16-ui-redesign.md
docs/superpowers/specs/: 2026-05-16-ip-monitor-design.md  2026-05-16-ui-redesign-design.md
scripts/: release.sh  verify-macos-dmg.sh
src/: App.tsx  i18n.test.ts  i18n.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src/components/: AlertModal.tsx  CountryFlag.tsx  IpComparison.tsx  IpInfoGrid.tsx  MainPanel.tsx  SettingsSection.tsx
src/hooks/: monitorStats.test.ts  monitorStats.ts  useMonitor.ts
src/services/: ip.test.ts  ip.ts
src/store/: config.test.ts  config.ts
tests/: alert-window-layout.test.ts  release-script.test.ts
