[workspace]

[package]
name = "ip-monitor"
version = "0.1.0"
description = "IP Monitor macOS App"
authors = []
edition = "2021"

[lib]
name = "ip_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ip-monitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
